try fix left aligned image for big display

--- a/assets/scss/article.scss
+++ b/assets/scss/article.scss
@@ -8,7 +8,6 @@
           height: 20px;
           background: var(--primary);
           position: absolute;
-          left: 0;
           top: 0;
           -webkit-transition: var(--color-mode-transition);
           -o-transition: var(--color-mode-transition);
@@ -476,7 +475,7 @@
         content: '';
         position: absolute;
         background: var(--grey);
-        width: 62%;
+        width: 50%;
         max-width: 100%;
         height: 1px;
         right: 0;
